[package]
license = "MIT"
description = "Fast and simple directory navigation in your terminal."
repository = "https://github.com/corepanic64/dirnav"
readme = "README.md"
name = "dirnav"
version = "0.1.6"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
opener = "0.8.3"
ratatui = "0.29.0"
